# fastapi-boilerplate

./: README.md  docker-compose-local.yml  main.py  pyproject.toml
api/: __init__.py
api/user/: __init__.py
api/user/v1/: __init__.py  controller.py
app/: __init__.py
core/: config.py
